<resources>
    <string name="app_name">Pomodoro</string>
    <string name="timerDisplay">%d:%s</string>
    <string name="pause_on_break_restart_description">Pause on Break, Restart</string>
    <string name="pause_now_continue_description">Pause now, Continue</string>
    <string name="on_break">TIMER PAUSED</string>
    <string name="on_study_break">ON BREAK</string>
    <string name="on_long_break">ON LONG BREAK</string>
    <string name="settings">Settings</string>
    <string name="on_study">STUDYING</string>
    <string name="press_play">Press Play to Start</string>
    <string name="cd_fourth_hourglass">fourth hourglass</string>
    <string name="cd_third_hourglass">third hourglass</string>
    <string name="cd_second_hourglass">second hourglass</string>
    <string name="cd_first_hourglass">first hourglass</string>
    <string name="cd_settings">Settings</string>
</resources>
